2010-05-08  Stuart Morgan  <stuartmorgan@chromium.org>

        Reviewed by Darin Fisher.

        Resolve most of the whitespace/comment/order differences in npapi.h
        and npruntime.h relative to the npapi-headers repository versions.
        No changes to the substance of the code.

        https://bugs.webkit.org/show_bug.cgi?id=38666

        * bridge/npapi.h:
        (_NPPrint::):
        (_NPCocoaEvent::):
        * bridge/npruntime.h:

2010-05-08  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        Fix guard around IndexedDatabase
        https://bugs.webkit.org/show_bug.cgi?id=38710

        No new tests, there is no new functionality.

        * page/PageGroup.h:

2010-05-08  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Simon Hausmann.

        [Qt] Platform plugin
        https://bugs.webkit.org/show_bug.cgi?id=38438

        Select popups delegate private API. To provide select popup delegates
        a plugin that implements QWebKitPlatformPlugin must be found
        in QCoreApplication::libraryPaths.

        * WebCore.pro:

2010-05-08  Leandro Pereira  <leandro@profusion.mobi>

        Reviewed by Gustavo Noronha Silva.

        [EFL] It does not make sense to use RenderThemeEfl::RenderThemeEfl, so
        use RenderThemeEfl (GCC 4.5 seems to be pickier about this).
        http://webkit.org/b/38770

        * platform/efl/RenderThemeEfl.cpp:
        (WebCore::renderThemeEflColorClassSelectionActive):
        (WebCore::renderThemeEflColorClassSelectionInactive):
        (WebCore::renderThemeEflColorClassFocusRing):
        (WebCore::renderThemeEflColorClassButtonText):
        (WebCore::renderThemeEflColorClassComboText):
        (WebCore::renderThemeEflColorClassEntryText):
        (WebCore::renderThemeEflColorClassSearchText):
        (WebCore::RenderThemeEfl::adjustCheckboxStyle):
        (WebCore::RenderThemeEfl::adjustRadioStyle):
        (WebCore::RenderThemeEfl::adjustButtonStyle):